# mapserver

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  configure.ac
include/: coredata.h
libmapdiff/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
libmapdiff/include/: Makefile.am
libmapdiff/include/mpdiff/: mpdiff.h
libmapdiff/lib/: Makefile.am  libmapdiff.pc.in  poccore.c
mapserverd/: mapserverd.scm
modules/: Makefile.am
modules/moddatamux/: Makefile.am  moddatamux.c
modules/modpsqlbe/: Makefile.am  modpsqlbe.c
modules/modsession/: Makefile.am  modsession.c
modules/modsxmp/: Makefile.am  modsxmp.c
ntsprund/: .gitignore  Makefile.am  daemon.c
