dnl Process this file with autoconf to produce a configure script.

AC_INIT(libmapdiff, 0.0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC

LT_INIT

dnl  *****************
dnl ***** options *****
dnl  *****************

AC_OUTPUT([
Makefile
lib/libmapdiff.pc
lib/Makefile
include/Makefile])
